# voidface

./: .editorconfig  .gitignore  CHANGELOG  COPYING  CREDITS  MAINTAINERS  Makefile  README  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: check-format.yml  ci.yml
Documentation/: architecture.md  coding-style.md  faq.md  glossary.md  limits.md  paper.md  status.md
Documentation/attacks/: composed.md  iris.md  pixel.md  semantic.md
Documentation/deployment/: browser.md  coreml.md  desktop.md  ios.md  onnx.md
Documentation/design/: foundation-encoder-attack-analysis.md
Documentation/models/: clip.md  detectors.md  generator.md  recognizers.md  restorers.md  vaes.md
Documentation/paper/: README.md
Documentation/paper/figures/: generate.sh  generate_figures.py  mermaid_01.mmd  mermaid_02.mmd
Documentation/process/: contributing.md  release.md  security.md
Documentation/training/: bilevel-adversarial.md  eot.md  kaggle-p100.md  normalize.md  overview.md  tuning.md
LICENSES/: Apache-2.0-gfpgan.txt  Apache-2.0-insightface.txt  MIT-biubug6-retinaface.txt
include/voidface/: core.pyi  generator.pyi  models.pyi
runtime/coreml/: README
runtime/onnx/: README
runtime/wasm/: README
samples/configs/: train_full.toml  train_kaggle_p100.toml  train_phase1.toml  train_r5_smoke.toml
samples/images/: README
scripts/: benchmark.py  check-license-headers.sh  download-models.sh
src/voidface/: __init__.py
src/voidface/attacks/: __init__.py  iris.py  semantic.py
src/voidface/core/: __init__.py  eot.py  jpeg.py  loss.py  pgd.py  train.py
src/voidface/data/: __init__.py  align.py  datasets.py
src/voidface/eval/: __init__.py  benchmark.py  perceptual.py
src/voidface/export/: __init__.py  coreml.py  onnx.py  ort.py  quantize.py
src/voidface/generator/: __init__.py  architecture.py
src/voidface/models/: __init__.py  base.py
src/voidface/models/clip/: __init__.py  openclip.py
src/voidface/models/detectors/: __init__.py  _retinaface_arch.py  mtcnn_pnet.py  retinaface.py
src/voidface/models/recognizers/: __init__.py  _iresnet.py  arcface.py  facenet.py
src/voidface/models/restorers/: __init__.py  base.py  gfpgan.py  identity.py  sampler.py  sd_vae.py
src/voidface/models/restorers/_gfpgan/: __init__.py  _basicsr_shims.py  gfpgan_clean.py  stylegan2_clean.py
src/voidface/models/vaes/: __init__.py  _diffusers_loader.py  sd15.py  sdxl.py
src/voidface/util/: __init__.py  checksum.py  config.py  facemask.py  flow.py  image.py  log.py  video.py
tests/: conftest.py
tests/integration/: __init__.py  test_full_pipeline.py  test_smoke_workflow.py  test_video_pipeline.py
tests/unit/: test_align.py  test_arcface_smoke.py  test_attacks_public_api.py  test_benchmark.py  test_benchmark_output_dir.py  test_bilevel_lpips.py  test_checksum.py  test_cli_bench_input_validation.py  test_cli_bench_strict.py  test_cli_bench_targets_validation.py  test_cli_common.py  test_cli_config_check.py  test_cli_dispatch_completeness.py  test_cli_export.py  test_cli_export_static_quant.py  test_cli_fast_startup.py  test_cli_help.py  test_cli_info.py  test_cli_init.py  test_cli_missing_file_errors.py  test_cli_mypy_clean.py  test_cli_package.py  test_cli_package_dry_run.py  test_cli_protect_batch.py  test_cli_protect_empty_batch.py  test_cli_protect_iris_flags.py  test_cli_protect_missing_image.py  test_cli_protect_output_json.py  test_cli_protect_video_validation.py  test_cli_protect_with_generator.py  test_cli_report.py  test_cli_train_dry_run.py  test_cli_verify.py  test_composite_loss.py  test_composite_loss_normalize.py  test_coreml_export.py  test_datasets.py  test_facemask.py  test_flow.py  test_generator.py  (+31 more)
tools/cli/: pyproject.toml
tools/cli/voidface_cli/: __init__.py  common.py  main.py
tools/cli/voidface_cli/commands/: __init__.py  bench.py  config_check.py  export.py  info.py  init.py  package.py  protect.py  protect_video.py  report.py  train.py  verify.py
tools/cli/voidface_cli/init_presets/: detector-only.toml  full.toml  recognizer-only.toml  smoke.toml
tools/desktop/: README
tools/ios/: README
tools/kaggle/: train.ipynb
tools/web/: README  index.html  package.json  tsconfig.json  vite.config.ts
tools/web/src/: main.ts
