# SPDX-License-Identifier: MIT

[project]
name = "voidface"
version = "0.0.1"
description = "Adversarial face-region blindfold for photos and short videos."
readme = { file = "README", content-type = "text/plain" }
requires-python = ">=3.11"
license = { file = "COPYING" }
authors = [
    { name = "Voidface contributors" },
]
keywords = [
    "adversarial",
    "cloaking",
    "deepfake",
    "face-swap",
    "privacy",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]

dependencies = [
    # Core numerics and imaging. Torch 2.2.x on Intel Mac was built
    # against NumPy 1.x; every other platform accepts NumPy 2. The
    # runtime is compatible with either.
    "numpy>=1.26,<2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "numpy>=1.26; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "pillow>=10.2",
    # PyTorch and vision. Intel Mac wheels stop at torch 2.2.x; every
    # other platform gets modern torch. Training is exercised on Linux
    # and Apple Silicon at any newer version.
    "torch>=2.2,<2.3; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch>=2.2; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "torchvision>=0.17,<0.18; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torchvision>=0.17; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    # Config and logging
    "tomli>=2.0; python_version<'3.11'",
    "structlog>=24.1",
    # Type stubs for numpy et al
    "types-Pillow>=10.2",
]

[project.optional-dependencies]
train = [
    "einops>=0.7",
    "lpips>=0.1.4",
    "pytorch-msssim>=1.0",
    "opencv-python-headless>=4.9",
    # Phase R1 model surrogates. facenet-pytorch gives us a differentiable
    # PNet (first-stage MTCNN) as a stand-in detector and InceptionResnetV1
    # as a stand-in identity encoder. Both auto-download weights on first
    # use. Phase R3 replaces both with in-house ArcFace/RetinaFace impls.
    "facenet-pytorch>=2.6.0",
    # Phase R2 additions. diffusers ships the Stable Diffusion 1.5 VAE
    # standalone; huggingface_hub caches weights. Neither depends on
    # facexlib or numba. Pin diffusers below the release line that
    # requires torch>=2.4 so Intel Mac (torch 2.2) still works.
    "diffusers>=0.27,<0.30; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "diffusers>=0.27; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "huggingface-hub>=0.24,<0.30; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "huggingface-hub>=0.24; sys_platform != 'darwin' or platform_machine != 'x86_64'",
]
export = [
    "onnx>=1.16",
    "onnxruntime>=1.19",
    "coremltools>=8.0; platform_system=='Darwin'",
]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
]
all = [
    "voidface[train,export,dev]",
]

[project.scripts]
voidface = "voidface_cli.main:app"

[project.urls]
Repository = "https://github.com/voidface/voidface"
Documentation = "https://github.com/voidface/voidface/tree/main/Documentation"
Issues = "https://github.com/voidface/voidface/issues"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voidface"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "include/",
    "Documentation/",
    "LICENSES/",
    "COPYING",
    "CREDITS",
    "CHANGELOG",
    "MAINTAINERS",
    "README",
    "pyproject.toml",
]

# --- ruff ---------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tools", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "TCH", # type-checking imports
    "RUF", # ruff-specific
    "PL",  # pylint subset
    "PT",  # pytest style
    "D",   # pydocstyle
]
ignore = [
    "D100",  # missing docstring in public module (module docstrings are in the code)
    "D104",  # missing docstring in public package
    "D203",  # 1 blank line required before class docstring (conflict with D211)
    "D213",  # multi-line docstring summary should start at second line (D212 wins)
    "PLR0913",  # too many arguments (ML code)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"scripts/**" = ["D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

# --- mypy ---------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
mypy_path = "include"
files = ["src/voidface"]

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "lpips.*",
    "coremltools.*",
    "onnxruntime.*",
    "einops.*",
]
ignore_missing_imports = true

# --- pytest ------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: tests that take more than a few seconds",
    "gpu: tests that require a CUDA-capable GPU",
    "network: tests that download files from the internet",
]
