# SPDX-License-Identifier: MIT

[project]
name = "voidface-cli"
version = "0.0.1"
description = "Command-line interface to the Voidface generator."
readme = { file = "../../README", content-type = "text/plain" }
requires-python = ">=3.11"
license = { file = "../../COPYING" }

dependencies = [
    "voidface==0.0.1",
]

[project.scripts]
voidface = "voidface_cli.main:app"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voidface_cli"]

[tool.hatch.build.targets.wheel.force-include]
"voidface_cli/init_presets" = "voidface_cli/init_presets"
